Bug 44503 - [945GM SNA] Heavy corruption of the UI
Summary: [945GM SNA] Heavy corruption of the UI
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-05 11:20 UTC by Paul Neumann
Modified: 2012-01-05 16:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Screenshot of the glitchy icons (64.00 KB, image/png)
2012-01-05 11:40 UTC, Paul Neumann
no flags Details
Glitchy desktop background (195.71 KB, image/png)
2012-01-05 11:41 UTC, Paul Neumann
no flags Details
Original wallpaper (190.97 KB, image/jpeg)
2012-01-05 11:42 UTC, Paul Neumann
no flags Details
Xorg.log with --enable-debug=full (1.65 MB, application/x-xz)
2012-01-05 11:50 UTC, Paul Neumann
no flags Details

Description Paul Neumann 2012-01-05 11:20:20 UTC
SNA from the latest -git is corrupting the UI pretty badly.
The desktop background is drawn in a weird, but regular fashion.
Icons, such as the files in thunar, get all mixed up and show different icons. Sometimes it is just another icon being shown. However, sometimes the icon itself garbled pretty badly, and there are parts of multiple icons or one part of a larger icon that is drawn.
Comment 1 Chris Wilson 2012-01-05 11:35:25 UTC
/me looks longingly at his beautiful xfce4 desktop...

Screenshot, Xorg.log, other bugs...
Comment 2 Paul Neumann 2012-01-05 11:40:39 UTC
Created attachment 55184 [details]
Screenshot of the glitchy icons
Comment 3 Paul Neumann 2012-01-05 11:41:21 UTC
Created attachment 55185 [details]
Glitchy desktop background
Comment 4 Paul Neumann 2012-01-05 11:42:19 UTC
Created attachment 55186 [details]
Original wallpaper
Comment 5 Paul Neumann 2012-01-05 11:50:04 UTC
Created attachment 55188 [details]
Xorg.log with --enable-debug=full

This log is from opening thunar, switching the directory in order to reproduce the corruption and logging out.
Comment 6 Chris Wilson 2012-01-05 12:55:25 UTC
Ok, I have a theory about the icons/images...

I've accidentally re-enabled a dependency on this xserver bug: http://cgit.freedesktop.org/~ickle/xserver/commit/?id=82b3282eb9a422624ae48d2563a245addce7546f

In short, I've attached a gpu bo to a SHM pixmap which is being reused and since I keep the old data, it gets stale very quickly.
Comment 7 Chris Wilson 2012-01-05 16:06:39 UTC
commit 3061382f98c0b284c250c1a36f7a4fee22046664
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jan 5 21:05:52 2012 +0000

    sna: Make sure that we do not attach to SHM pixmaps in ignorance
    
    Without xserver support for notification of when scratch pixmaps are
    reused, we simply cannot attach our privates to them lest we cause
    corruption with SHM pixmaps.
    
    This is a recent regression back unto an old, old xserver issue.
    
    Reported-by: Paul Neumann <paul104x@yahoo.de>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=44503
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

If I've diagnosed the problem correctly and completely, this should clear the issue. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.